crates/plotnik-tests/tests/03-analyze/empty_constructs/nested_empty_tree.txt
Q = (foo ())
------------------ DIAGNOSTICS -------------------
error: empty `()` matches nothing
 --> query.ptk:1:10
  |
1 | Q = (foo ())
  |          ^^
  |
help: use `(_)` to match any named node, or `_` for any node
-------------------- SYMBOLS ---------------------
